<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.lmsautovista.View.Activity.ChangePasswordActivity">

    <LinearLayout
        android:id="@+id/userId_changepassword_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/autovista_logo"
            android:padding="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />
        <EditText
            android:id="@+id/currentPassword_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_password"
            android:textColor="@color/darkBlueWebsite"
            android:background="@drawable/outline_blue_curved_rectangle"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:textSize="15sp"
            android:textColorHint="@color/edittextcolor"
            />

        <EditText
            android:id="@+id/newPassword_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/currentPassword_EditText"
            android:hint="@string/new_password"
            android:textColor="@color/darkBlueWebsite"
            android:background="@drawable/outline_blue_curved_rectangle"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:textSize="15sp"
            android:textColorHint="@color/edittextcolor"

            />

        <EditText
            android:id="@+id/confirmPassword_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/newPassword_editText"
            android:hint="@string/confirm_password"
            android:textColor="@color/darkBlueWebsite"
            android:background="@drawable/outline_blue_curved_rectangle"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:textSize="15sp"
            android:textColorHint="@color/edittextcolor"
            />
        <Button
            android:id="@+id/changePassword_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_round_curved_rectangle"
            android:textColor="@color/colorPlatinum"
            android:text="@string/change_password"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/loginhere_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkBlueWebsite"
            android:hint="@string/login_here"
            android:textAlignment="center"
            android:paddingTop="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:paddingBottom="5dp"
            android:textSize="15sp" />

    </LinearLayout>
</RelativeLayout>

