<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.user.lmsautovista.View.Fragment.SearchCustomerFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/searchCustomerCustomerOperation_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4sp"
        app:cardElevation="4sp"
        android:layout_margin="10dp"
        >

    <RelativeLayout
        android:id="@+id/searchCustomerCustomerOPeration_realtiveLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/searchCustomerOperationHeading_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchCustomer"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/darkBlueWebsite"
            android:layout_margin="10dp"
            />

        <View
            android:id="@+id/separatorCustomerSearch_View"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/searchCustomerOperationHeading_TextView"
            />

        <EditText
            android:id="@+id/searchNameContactNoCustomerSearch_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterNameContactNo"
            android:textColor="@color/edittextcolor"
            android:textSize="12sp"
            android:background="@drawable/outline_blue_curved_rectangle"
            android:backgroundTint="@android:color/transparent"
            android:layout_below="@+id/separatorCustomerSearch_View"
            android:layout_margin="10dp"
            android:padding="10dp"
            />

        <Button
            android:id="@+id/searchNameContcatNo_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/submit"
            android:textColor="@color/darkBlueWebsite"
            android:background="@drawable/outline_blue_curved_rectangle"
            android:layout_below="@+id/searchNameContactNoCustomerSearch_edittext"
            />

    </RelativeLayout>

    </android.support.v7.widget.CardView>
</FrameLayout>
