<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.lmsautovista.View.Activity.LoginActivity">

    <LinearLayout
        android:id="@+id/userId_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/autovista_logo"
            android:padding="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />

        <EditText
            android:id="@+id/userId_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:textSize="15sp"
            android:hint="@string/userID"
            android:text="admin@autovista.in"
            android:textColor="@color/darkBlueWebsite"
            android:background="@drawable/outline_blue_curved_rectangle"
            android:textColorHint="@color/edittextcolor"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userId_et"
            android:hint="@string/password"
            android:textColor="@color/darkBlueWebsite"
            android:background="@drawable/outline_blue_curved_rectangle"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="admin@1323"
            android:paddingLeft="15dp"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:textColorHint="@color/edittextcolor"
            />

        <Button
            android:id="@+id/login_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_round_curved_rectangle"
            android:textColor="@color/colorPlatinum"
            android:text="@string/login"
            android:layout_below="@id/password_et"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:textSize="15sp"
            />


    </LinearLayout>
</RelativeLayout>
